[package]
name = "sqlite-compressions"
version = "0.1.0"  # This value is also used in the README.md
description = "Compression, decompression, and testing functions for SQLite: gzip, brotli, ..."
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
repository = "https://github.com/nyurik/sqlite-compressions"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["sqlite", "compression", "rusqlite", "gzip", "brotli"]
categories = ["database", "compression"]
rust-version = "1.64.0"

[features]
default = ["trace", "gzip", "brotli"]
#
# Enable Trace Logging
trace = ["dep:log"]
#
# Encoding algorithms
gzip = ["dep:flate2"]
brotli = ["dep:brotli"]

[dependencies]
log = { version = "0.4", optional = true }
rusqlite = { version = "0.30.0", features = ["functions"] }
flate2 = { version = "1.0", optional = true }
brotli = { version = "3", optional = true }

[dev-dependencies]
cargo-husky = { version = "1", features = ["user-hooks"], default-features = false }
ctor = "0.2"
env_logger = "0.10"
hex = "0.4"
insta = { version = "1", features = [] }

[lints.rust]
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"
