[package]
name = "sqlite-compressions"
# This value is also used in the README.md
version = "0.3.9"
description = "Compression, decompression, testing, diffing and patching functions for SQLite: gzip, brotli, bsdiff, ..."
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
repository = "https://github.com/nyurik/sqlite-compressions"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["sqlite", "compression", "gzip", "brotli", "bsdiff"]
categories = ["database", "compression"]
rust-version = "1.82"

[lib]
name = "sqlite_compressions"

# Loadable extension is a cdylib (lib), but Rust does not allow multiple libs per crate, so using an example instead.
# See https://github.com/rust-lang/cargo/issues/8628
[[example]]
name = "sqlite_compressions"
path = "src/cdylib/cdylib.rs"
crate-type = ["cdylib"]
required-features = ["loadable_extension"]

[[bench]]
name = "bench"
harness = false

[features]
default = ["trace", "brotli", "bsdiff4", "bsdiffraw", "bzip2", "gzip"]
# Use this feature to build loadable extension.
# Assumes --no-default-features.
default_loadable_extension = ["loadable_extension", "brotli", "bsdiff4", "bsdiffraw", "bzip2", "gzip"]
#
# Enable Trace Logging
trace = ["dep:log"]
#
# Build loadable extension.
# See https://github.com/rusqlite/rusqlite/discussions/1423
# This feature does not work with "rusqlite/modern_sqlite"
loadable_extension = ["rusqlite/loadable_extension", "rusqlite/trace"]
#
# Encoding algorithms
brotli = ["dep:brotli"]
bsdiff4 = ["dep:qbsdiff"]
bsdiffraw = ["dep:bsdiff"]
bzip2 = ["dep:bzip2"]
gzip = ["dep:flate2"]

[dependencies]
brotli = { version = ">=5.0, <9.0", optional = true }
bsdiff = { version = "0.2.1", optional = true }
bzip2 = { version = "0.6.1", optional = true }
flate2 = { version = "1.1.5", optional = true }
log = { version = "0.4.28", optional = true }
qbsdiff = { version = "1.4.3", optional = true }

# There are multiple versions that could work. However, sqlx requires a specific one, so don't limit it here
# Note that cdylib requires >= 0.32.0 (controlled by the lock file)
# The `set-min-rusqlite-version` just recipe will parse the minimum version from here, so it must be 3 part
rusqlite = { version = ">=0.30.0", features = ["functions"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
ctor = "0.6"
env_logger = "0.11"
hex = "0.4"
insta = { version = "1", features = [] }
rstest = "0.26"

[lints.rust]
unused_qualifications = "warn"

[lints.clippy]
# Restrictions
panic_in_result_fn = "warn"
todo = "warn"
unwrap_used = "warn"
# Pedantics without being too noisy
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"

#[patch.crates-io]
#rusqlite = { path = "../rusqlite" }
#libsqlite3-sys = { path = "../rusqlite/libsqlite3-sys" }
